Build 3.0.0.CR1
=============================
** Known BREAKING CHANGES from NH2.1.1.GA to NH3.0.0.CR1

	##### Run time #####
		* [NH-2199] - null values in maps/dictionaries are no longer silenty ignored/deleted
		* [NH-1894] - SybaseAnywhereDialect has been removed, and replaced with SybaseASA9Dialect.
					- Sybase Adaptive Server Enterprise (ASE) dialects removed.

	##### Possible Breaking Changes #####
		* [NH-2251] - Signature change for GetLimitString in Dialect
		* [NH-2284] - Obsolete members removed
		* Related to [NH-2358]: DateTimeOffset type now works as a DateTimeOffset instead a "surrogate" of DateTime

Build 3.0.0.CR1
=============================

		
Build 3.0.0.Beta2 (rev5254)
=============================

** Bug
    * [NH-1155] - SubselectFetch doesn't take into account paging
    * [NH-2371] - Exception is thrown when using SetMaxResults on query using MySQL
    * [NH-2374] - ForeignGenerator does not support EntityMode.Map

** Improvement
    * [NH-1799] - Change SQL Server dialect to support variable limits
    * [NH-2376] - Allow IDisposable for event-listeners

** Patch
    * [NH-2342] - Added XDocument type
    * [NH-2378] - Don't currently support idents of type Int16
    * [NH-2391] - Updated Chapter 4

Build 3.0.0.Beta1 (rev5241)
=============================

** Bug
    * [NH-2001] - Filter by  Null in Linq (hql ast version)  doesn't work  
    * [NH-2077] - SQL Server Dialect: Nhibernate fails to execute native queries with parameters, separated with ';'
    * [NH-2084] - Future + hql queries + same parameter name leads to "NHibernate.QueryException: The named parameter personId was used in more than one query. Either give unique names to your parameters, or use the multi query SetParameter() methods"
    * [NH-2331] - ICriteria: Correlated query throws "Could not find a matching criteria info provider to", works in 2.1.0 broken in 2.1.2