@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<hibernate-mapping xmlns="urn:nhibernate-mapping-2.2" assembly="NHibernate.Test" namespace="NHibernate.Test.NHSpecificTest.NH2392">
+  <class name="A" table="a" lazy="false" optimistic-lock="dirty" dynamic-update="true">
+    <id name="Id" column="id" unsaved-value="null">
+      <generator class="native" />
+    </id>
+    <property name="StringData1"/>
+    <property name="MyPhone" type="NHibernate.Test.NHSpecificTest.NH2392.PhoneNumberUserType, NHibernate.Test">
+      <column name="MyPhoneCountryCode"/>
+      <column name="MyPhoneNumber"/>
+    </property>
+    <property name="StringData2"/>
+  </class>
+</hibernate-mapping>
